--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,7 +3,7 @@ version: 2
 build:
   os: ubuntu-lts-latest
   tools:
-    python: latest
+    python: '3.13'
   jobs:
     # The *create_environment steps replace RTD's virtual environment
     # steps with uv, a much faster alternative to virtualenv+pip.
