--- a/tools/schemacode/.readthedocs.yaml
+++ b/tools/schemacode/.readthedocs.yaml
@@ -3,7 +3,7 @@ version: 2
 build:
   os: ubuntu-lts-latest
   tools:
-    python: latest
+    python: '3.13'
   jobs:
     create_environment:
       - asdf plugin add uv https://github.com/asdf-community/asdf-uv.git
