--- a/src/schema/rules/tabular_data/pet.yaml
+++ b/src/schema/rules/tabular_data/pet.yaml
@@ -91,7 +91,7 @@ PETDerivativesKineticModeling:
   columns:
     index:
       level: recommended
-    name:
+    name__kinetic_modeling:
       level: recommended
     parameter:
       level: recommended
