Revert "Apply suggestion from @bendichter" to bring back width__probes
This reverts commit d1835cf0c698b85ee4c5d5b4d06764d7ee1a2f3c . spotted by
seeing na na in the table.  We have height and depth so makes sense to keep width, and now we get

    ❯ git grep __probes -- src/schema/objects/columns.yaml
    src/schema/objects/columns.yaml:AP__probes:
    src/schema/objects/columns.yaml:depth__probes:
    src/schema/objects/columns.yaml:DV__probes:
    src/schema/objects/columns.yaml:height__probes:
    src/schema/objects/columns.yaml:hemisphere__probes:
    src/schema/objects/columns.yaml:manufacturer__probes:
    src/schema/objects/columns.yaml:material__probes:
    src/schema/objects/columns.yaml:  name: material__probes
    src/schema/objects/columns.yaml:ML__probes:
    src/schema/objects/columns.yaml:type__probes:
    src/schema/objects/columns.yaml:width__probes:

Ideally the rendered should have failed and not just added na's row but
that shouldn't be fixed here...

--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -1149,6 +1149,13 @@ wavelength_emission_actual:
     `n/a` for channels that do not contain raw NIRS signals (acceleration).
     This field is equivalent to `measurementList.wavelengthEmissionActual` in the SNIRF specification.
   type: number
+width__probes:
+  name: width
+  display_name: Width
+  description: |
+    Physical width of the probe, for example, '5'.
+    This dimension corresponds to the x-axis of the probe's local coordinate frame.
+  type: number
 whole_blood_radioactivity:
   name: whole_blood_radioactivity
   display_name: Whole blood radioactivity
