--- a/src/schema/rules/sidecars/prov.yaml
+++ b/src/schema/rules/sidecars/prov.yaml
@@ -1,6 +1,7 @@
 ---
 CommonProvenanceFields:
-  selectors: null
+  selectors:
+    - true # rule is validated for all sidecars files
   fields:
     FileGeneratedById: optional
     SidecarGeneratedBy: optional
