--- a/src/schema/rules/sidecars/prov.yaml
+++ b/src/schema/rules/sidecars/prov.yaml
@@ -1,7 +1,7 @@
 ---
 CommonProvenanceFields:
   selectors:
-    - true # rule is validated for all sidecars files
+    - "true" # rule is validated for all sidecars files
   fields:
     FileGeneratedById: optional
     SidecarGeneratedBy: optional
