--- a/src/schema/rules/dataset_metadata.yaml
+++ b/src/schema/rules/dataset_metadata.yaml
@@ -67,13 +67,13 @@ atlas_description:
   fields:
     AtlasName: required
     License: required
-    AtlasSampleSize: required
     Description: recommended
     Authors: recommended
     Curators: optional
     Funding: optional
     ReferencesAndLinks: optional
     Species: optional
+    AtlasSampleSize: optional
     DerivedFrom: optional
     LevelType: optional
     RRID: optional
