--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -3853,7 +3853,7 @@ Species:
   name: Species
   display_name: Species
   description: |
-    The species the atlas was derived from. For example, could be Human, Macaque, Rat, or Mouse.
+    The species from which the atlas was derived. For example, "human", "macaque", "rat", or "mouse".
   type: string
 SpecificRadioactivity:
   name: SpecificRadioactivity
