--- a/src/schema/rules/dataset_metadata.yaml
+++ b/src/schema/rules/dataset_metadata.yaml
@@ -19,7 +19,7 @@ dataset_description:
     DatasetDOI: optional
     DatasetProvType: optional
     DatasetDigest: optional
-    DatasetGeneratedBy: recommended
+    Dataset__GeneratedBy: recommended
     SourceDatasets: recommended
 
 dataset_authors:
@@ -41,7 +41,7 @@ derivative_description:
     - path == "/dataset_description.json"
     - json.DatasetType == "derivative"
   fields:
-    DatasetGeneratedBy: required
+    Dataset__GeneratedBy: required
 
 dataset_description_with_genetics:
   selectors:
