refactor metadata fields

--- a/src/schema/rules/json/prov.yaml
+++ b/src/schema/rules/json/prov.yaml
@@ -17,8 +17,8 @@ ProvEntitiesProvenanceFile:
   selectors:
     - datatype == "prov"
     - suffix == "ent"
-    - '"Files" not in json'
-    - '"Datasets" not in json'
+    - '!("Files" in json)'
+    - '!("Datasets" in json)'
   fields:
     Entities__ProvEntities: required
 
@@ -26,8 +26,8 @@ FilesProvenanceFile:
   selectors:
     - datatype == "prov"
     - suffix == "ent"
-    - '"Datasets" not in json'
-    - '"Entities" not in json'
+    - '!("Datasets" in json)'
+    - '!("Entities" in json)'
   fields:
     Files__ProvEntities: required
 
@@ -35,8 +35,8 @@ DatasetsProvenanceFile:
   selectors:
     - datatype == "prov"
     - suffix == "ent"
-    - '"Files" not in json'
-    - '"Entities" not in json'
+    - '!("Files" in json)'
+    - '!("Entities" in json)'
   fields:
     Datasets__ProvEntities: required
 
