docs(appendices): add microelectrode surgical coordinates appendix
Add new appendix documenting stereotaxic coordinate conventions for
intracranial probe placement during surgery, including:
- Anatomical reference points (Bregma and Lambda)
- AP/ML/DV coordinate system conventions
- Angle definitions for probe orientation (AP, ML, rotation)
- Reference to BrainSTEM documentation source

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
           - MEG file formats: appendices/meg-file-formats.md
           - MEG systems: appendices/meg-systems.md
           - Coordinate systems: appendices/coordinate-systems.md
+          - Microelectrode surgical coordinates: appendices/microelectrode-surgical-coordinates.md
           - Quantitative MRI: appendices/qmri.md
           - Arterial Spin Labeling: appendices/arterial-spin-labeling.md
           - Cross modality correspondence: appendices/cross-modality-correspondence.md
