Add probes related schema changes

--- a/src/schema/objects/files.yaml
+++ b/src/schema/objects/files.yaml
@@ -133,3 +133,10 @@ stimuli:
     A directory to store any stimulus files used during an experiment.
     See the [relevant section](SPEC_ROOT/modality-agnostic-files/events.md#stimuli-directory)
     for more information.
+probes:
+  display_name: Probes
+  file_type: directory
+  description: |
+    A directory to store probe using the ProbeInterface specification format. This folder can be used to also store the associated probe figures.
+    This is primarily intended for use with Microelectrode Electrophysiology data, see more information in the 
+    [relevant section](SPEC_ROOT/modality-specific-files/microelectrode-electrophysiology.md#probeinterface-library).
