--- a/src/schema/rules/directories.yaml
+++ b/src/schema/rules/directories.yaml
@@ -56,6 +56,7 @@ raw:
       - sourcedata
       - stimuli
       - subject
+      - probes
   code:
     name: code
     level: optional
@@ -102,6 +103,10 @@ raw:
     value: datatype
     level: required
     opaque: false
+  probes:
+    name: probes
+    level: optional
+    opaque: true
 
 derivative:
   root:
