Fix EMG coordsystem and electrode validation
- Exclude coordsystem files from SIDECAR_WITHOUT_DATAFILE error
- Add subject: optional to coordsystem__emg for root-level placement
- Add coordsystem__emg_root rule for root-level files
- Add conditional uniqueness for EMG electrodes based on group column
- Update test for optional subject patterns

--- a/src/schema/rules/errors.yaml
+++ b/src/schema/rules/errors.yaml
@@ -142,8 +142,8 @@ SidecarWithoutDatafile:
   level: error
   selectors:
     - extension == ".json"
-    - suffix != "coordsystem" || modality != "emg"
-    # ↑ EMG allows multiple coordsys files per data file (distinguished via `space` entity)
+    - suffix != "coordsystem"
+    # ↑ coordsystem files can be shared via inheritance principle and may not have direct data files
 
 # BIDS Validator Original Issue Code #97
 MissingSession:
