--- a/src/schema/rules/sidecars/beh.yaml
+++ b/src/schema/rules/sidecars/beh.yaml
@@ -42,7 +42,9 @@ AudioVideoStreams:
   fields:
     AudioChannelCount: optional
     AudioSampleRate: optional
+    AudioBitDepth: optional
     FrameRate: optional
     Height: optional
     Width: optional
+    CameraPosition: optional
     Duration: optional
