--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -491,7 +491,7 @@ material:
     Material of the electrode (for example, `Tin`, `Ag/AgCl`, `Gold`).
   type: string
 material__probes:
-  name: material__probes
+  name: material
   display_name: Material
   description: |
     A textual description of the base material of the probe.
@@ -865,20 +865,12 @@ software_filters:
   name: software_filters
   display_name: Software filters
   description: |
-    List of temporal and/or spatial software filters applied
-    (for example, `SSS`, `SpatialCompensation`).
-    Note that parameters should be defined in the general MEG sidecar .json file.
-    Indicate `n/a` in the absence of software filters applied.
-  type: string
-# TODO: This seems very confusing. Should be merge with the column above?
-software_filters__channels:
-  name: software_filters
-  display_name: Software filters
-  description: |
-    List of temporal and/or spatial software filters applied
-    (for example, `SSS`, `SpatialCompensation`).
-    Note that parameters should be defined in the general microephys sidecar .json file.
-    Indicate `n/a` in the absence of software filters applied.
+    List of temporal and/or spatial software filters applied.
+
+    For detailed filter parameters, use the `SoftwareFilters` field in the
+    modality sidecar JSON (for example, `*_ieeg.json`, `*_ecephys.json`, `*_icephys.json`).
+
+    Use `n/a` if no software filters were applied.
   anyOf:
     - type: string
     - type: string
@@ -1248,7 +1240,13 @@ z:
   display_name: Z position
   description: |
     Recorded position along the z-axis.
-  type: number
+
+    For 2D electrode localizations, this SHOULD be a column of `n/a` values.
+  anyOf:
+    - type: number
+    - type: string
+      enum:
+        - n/a
 x__optodes:
   name: x
   display_name: X position
@@ -1268,8 +1266,12 @@ z__optodes:
   display_name: Z position
   description: |
     Recorded position along the z-axis.
-    `"n/a"` if not available.
-  type: number
+    "`n/a`" if not available.
+  anyOf:
+    - type: number
+    - type: string
+      enum:
+        - n/a
 # TODO: Remove the overspecified entries for electrode positions if not used in microephys
 # TODO: finish up setup below
 x__electrodes:
@@ -1294,8 +1296,15 @@ z__electrodes:
   display_name: Electrode Z position
   description: |
     Recorded position along the local depth-axis relative
-    to the probe origin (see `_probes.tsv`)
-  type: number
+    to the probe origin (see `_probes.tsv`).
+
+    For 2D electrode localizations (for example, when the coordinate system is
+    `Pixels`), this SHOULD be a column of `n/a` values.
+  anyOf:
+    - type: number
+    - type: string
+      enum:
+        - n/a
 template_x:
   name: template_x
   display_name: X template position
